# KUiot1stProject

./: .gitignore  README.md
cProgram/: CMakeLists.txt  farmsql.sql
cProgram/include/: farmsql.h  serial.h  thread.h
cProgram/src/: farmsql.c  main  main.c  pc_receive.c  pthread.c  serial.c  sql_save.c
lib/clcd/: clcd.c  multiLCD.c  multiLCD.h
lib/i2c/: i2c_master.c
lib/uart/: uart.c  uart.h
src/: double_LCD.c  multi_LCD.c  smart.c  uart_button.c
